add redirect for for-like, all button submit in one time

--- a/src/MainBundle/Resources/views/Component/_like.html.twig
+++ b/src/MainBundle/Resources/views/Component/_like.html.twig
@@ -1,18 +1,17 @@
-{{ dump() }}
 <div class="like-block">
     {% if form_like is not empty %}
         {% if show_status_like == 1 %}
             <div class="blog-like-form active">
-                {{ form_start(form_like) }}
-                {{ form_row(form_like.send) }}
+                {{ form_start(form_like, {'name': 'form_like_'~post_id}) }}
+                {{ form_row(form_like.send, {'full_name': 'form_like_'~post_id~'[send]'}) }}
                 {{ form_end(form_like) }}
             </div>
         {% endif %}
 
         {% if show_status_like == 0 %}
             <div class="blog-like-form">
-                {{ form_start(form_like) }}
-                {{ form_row(form_like.send) }}
+                {{ form_start(form_like, {'name': 'form_like_'~post_id}) }}
+                {{ form_row(form_like.send, {'full_name': 'form_like_'~post_id~'[send]'}) }}
                 {{ form_end(form_like) }}
             </div>
         {% endif %}
