--- a/src/MainBundle/Resources/views/Component/_like.html.twig
+++ b/src/MainBundle/Resources/views/Component/_like.html.twig
@@ -1,25 +1,8 @@
 <div class="like-block">
-    {% if form_like is not empty %}
-        {% if show_status_like == 1 %}
-            <div class="blog-like-form active">
-                {{ form_start(form_like, {'name': 'form_like_'~post_id}) }}
-                {{ form_row(form_like.send, {'full_name': 'form_like_'~post_id~'[send]'}) }}
-                {{ form_end(form_like) }}
-            </div>
-        {% endif %}
-
-        {% if show_status_like == 0 %}
-            <div class="blog-like-form">
-                {{ form_start(form_like, {'name': 'form_like_'~post_id}) }}
-                {{ form_row(form_like.send, {'full_name': 'form_like_'~post_id~'[send]'}) }}
-                {{ form_end(form_like) }}
-            </div>
-        {% endif %}
-    {% endif %}
-
-    <div class="blog-like-count">
-        {% for like in show_count_like %}
-            {{ like.like_count }}
-        {% endfor %}
+{% if form_like is defined and form_like is not empty %}
+    <div class="blog-like-form{% if show_status_like %} active{% endif %}">
+        {{ form(form_like) }}
     </div>
+{% endif %}
+    <div class="blog-like-count">{{ like_count }}</div>
 </div>
