--- a/src/MainBundle/Resources/views/Component/_like.html.twig
+++ b/src/MainBundle/Resources/views/Component/_like.html.twig
@@ -1,6 +1,6 @@
 <div class="like-block">
 {% if form_like is defined and form_like is not empty %}
-    <div class="blog-like-form{% if show_status_like %} active{% endif %}">
+    <div class="blog-like-form{% if show_status_like is empty %} active{% endif %}">
         {{ form(form_like) }}
     </div>
 {% endif %}
