--- a/web/assets/src/scss/Component/_like.scss
+++ b/web/assets/src/scss/Component/_like.scss
@@ -22,10 +22,10 @@
           z-index: 9;
           position: absolute;
           content: "";
-          left: rem(10px);
-          top: 0;
-          width: rem(10px);
-          height: rem(16px);
+          left: rem(7px);
+          top: rem(4px);
+          width: rem(7px);
+          height: rem(11px);
 		  background: $grey;
           border-radius: rem(50px) rem(50px) 0 0;
           transform: rotate(-45deg);
