--- a/web/assets/src/scss/variables/_color.scss
+++ b/web/assets/src/scss/variables/_color.scss
@@ -5,11 +5,12 @@ $black: #000000;
 //== Theme colors ==//
 
 //text colors
+$grey-light: #e4e4e4;
 $grey: #95a1ac;
 $blue: #039be5;
 
 //background colors
+$white-coffee: #f1f1f1;
 $black-light: #2f2f2f;
 $black-dark: #0f0f0f;
 $blue-light: #3D525B;
-$white-coffee: #f1f1f1;
