--- a/web/assets/src/scss/variables/_color.scss
+++ b/web/assets/src/scss/variables/_color.scss
@@ -13,4 +13,4 @@ $blue: #039be5;
 $white-coffee: #f1f1f1;
 $black-light: #2f2f2f;
 $black-dark: #0f0f0f;
-$blue-light: #3D525B;
+$blue-light: #3d525b;
