--- a/web/assets/src/scss/Component/_comment.scss
+++ b/web/assets/src/scss/Component/_comment.scss
@@ -1,31 +1,47 @@
 .blog-comment {
+  color: $grey;
 
   .blog-comment-item {
     margin-bottom: rem(25px);
-    background: $white-coffee;
-    border: rem(1px) solid $blue-light;
     padding: rem(10px);
+    position: relative;
   }
 
   .blog-comment-item-content {
-    margin-bottom: rem(20px);
+    padding: rem(10px) 0;
+    padding-left: 85px;
   }
 
   .blog-comment-item-info {
+    position: relative;
 
     .blog-cii-name,
     .blog-cii-date {
       display: inline-block;
-      padding-right: rem(25px);
+      padding-left: rem(25px);
+    }
 
-      &:last-child {
-        padding-right: 0;
-      }
+    .blog-cii-id{
+      position: absolute;
+      top: 0;
+      right: 0;
     }
 
     img {
-      max-width: rem(32px);
-      max-height: rem(32px);
+      max-width: rem(50px);
+      max-height: rem(50px);
+    }
+
+    &.no-image{
+
+      .blog-cii-name,
+      .blog-cii-date {
+        padding-left: 0;
+      }
+
+      .blog-cii-date{
+        padding-left: rem(25px);
+      }
     }
   }
 }
