--- a/web/assets/src/scss/Component/_comment.scss
+++ b/web/assets/src/scss/Component/_comment.scss
@@ -31,23 +31,31 @@
       max-width: rem(50px);
       max-height: rem(50px);
     }
+  }
 
-    &.no-image{
+  .blog-comment-item.no-image{
 
       .blog-cii-name,
       .blog-cii-date {
         padding-left: 0;
       }
 
-      .blog-cii-date{
+      .blog-cii-date {
         padding-left: rem(25px);
       }
+
+    .blog-comment-item-content {
+      padding-left: 0;
     }
   }
 }
 
 // Comment form.
 .blog-item-comment-form {
+
+  p{
+    color: $grey;
+  }
 
   .input-text {
     margin-bottom: rem(25px);
